# models/Incidencia.go
@@ -1,14 +1,19 @@
 package models
 
-import "github.com/beego/beego/v2/client/orm"
+import (
+	"encoding/json"
+	"time"
+
+	"github.com/beego/beego/v2/client/orm"
+)
 
 type Incidencia struct {
-	PK_ID_INCIDENCIA        int64  `orm:"column(PK_ID_INCIDENCIA);pk;auto" json:"PK_ID_INCIDENCIA"`
-	FECHA                   string `orm:"column(FECHA);type(date)" json:"FECHA"`
-	MONTO                   int64  `orm:"column(MONTO)" json:"MONTO"`
-	RESTA                   bool   `orm:"column(RESTA);type(boolean)" json:"RESTA"`
-	MOTIVO                  string `orm:"column(MOTIVO);type(text)" json:"MOTIVO"`
-	PK_DOCUMENTO_TRABAJADOR *int64 `orm:"column(PK_DOCUMENTO_TRABAJADOR);null" json:"PK_DOCUMENTO_TRABAJADOR,omitempty"`
+	PK_ID_INCIDENCIA        int64     `orm:"column(PK_ID_INCIDENCIA);pk;auto" json:"PK_ID_INCIDENCIA"`
+	FECHA                   time.Time `orm:"column(FECHA);type(date)" json:"FECHA"`
+	MONTO                   int64     `orm:"column(MONTO)" json:"MONTO"`
+	RESTA                   bool      `orm:"column(RESTA);type(boolean)" json:"RESTA"`
+	MOTIVO                  string    `orm:"column(MOTIVO);type(text)" json:"MOTIVO"`
+	PK_DOCUMENTO_TRABAJADOR *int64    `orm:"column(PK_DOCUMENTO_TRABAJADOR);null" json:"PK_DOCUMENTO_TRABAJADOR,omitempty"`
 }
 
 func (i *Incidencia) TableName() string {
@@ -17,4 +22,15 @@ func (i *Incidencia) TableName() string {
 
 func init() {
 	orm.RegisterModel(new(Incidencia))
+}
+
+func (t Incidencia) MarshalJSON() ([]byte, error) {
+	type Alias Incidencia
+	return json.Marshal(&struct {
+		FECHA string `json:"FECHA"`
+		Alias
+	}{
+		FECHA: t.FECHA.Format("2006-01-02"),
+		Alias: (Alias)(t),
+	})
 }
